@@ -5,7 +5,7 @@
 
 	<groupId>com.identicum.midpoint</groupId>
 	<artifactId>connector-koha</artifactId>
-	<version>1.0.0</version>
+        <version>1.0.1</version>
 	<packaging>jar</packaging>
 
 	<name>Midpoint Koha Connector</name>
@@ -54,14 +54,32 @@
 			<version>5.9.3</version>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.9.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.2.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>5.2.0</version>
+            <scope>test</scope>
+        </dependency>
+		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-inline -->
 		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-engine</artifactId>
-			<version>5.9.3</version>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-inline</artifactId>
+                        <version>5.2.0</version>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
-
+    </dependencies>
 	<build>
 		<plugins>
 			<plugin>
@@ -91,6 +109,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.2.5</version>
+                                <configuration>
+                                        <argLine>-Dnet.bytebuddy.experimental=true</argLine>
+                                </configuration>
 			</plugin>
 		</plugins>
 	</build>
